Chests are now hooked into the karma system. Inventory actions are supported, such as switching items, and using shift-click. The cache on the Commander is updated to reflect the changes from chests. Will probably utilize this chest to help me page through for chests.

--- a/KarmicShare/plugin.yml
+++ b/KarmicShare/plugin.yml
@@ -27,6 +27,8 @@ permissions:
             KarmicShare.take: true
             KarmicShare.admin: true
             KarmicShare.info: true
+            KarmicShare.sign: true
+            KarmicShare.chest: true
             KarmicShare.karma.other: true
         default: op
     KarmicShare.karma:
@@ -43,6 +45,12 @@ permissions:
         default: op
     KarmicShare.info:
         description: Allows user to inspect items
+        default: op
+    KarmicShare.chest:
+        description: Allows user to use the chests
+        default: op
+    KarmicShare.sign:
+        description: Allows user to make/destroy associated signs for chests
         default: op
     KarmicShare.admin:
         description: Allows user to administrate plugin
