--- a/KarmicShare/.classpath
+++ b/KarmicShare/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/PermissionsEX"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Vault"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SpoutAPI"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/LogBlockQuestioner"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
