Removed library reference for LogBlockQuestioner since its being used internally. Removed softdependency on LogBlockQuestioner for the same reason.

--- a/KarmicShare/plugin.yml
+++ b/KarmicShare/plugin.yml
@@ -11,7 +11,7 @@ description: Command-based item sharing with karma system
 authors:
   - Mitsugaru
 
-softdepend: [Vault, PermissionsEX, Spout, LogBlockQuestioner,]
+softdepend: [Vault, PermissionsEX, Spout]
 
 commands:
   ks:
