Added unimplemented missing methods for BetterChest.

--- a/KarmicShare/.classpath
+++ b/KarmicShare/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/PermissionsEX"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Vault"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/bukkit"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/PEX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
