--- a/KarmicShare/pom.xml
+++ b/KarmicShare/pom.xml
@@ -1,36 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mitsugaru</groupId>
-  <artifactId>KarmicShare</artifactId>
-  <version>0.321-SNAPSHOT</version>
-  <name>KarmicShare</name>
-  <description>Bukkit plugin that allows players to share items using a community item pool.</description>
-  <scm>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>KarmicShare</artifactId>
+	<version>0.321-SNAPSHOT</version>
+	<name>KarmicShare</name>
+	<description>Bukkit plugin that allows players to share items using a community item pool.</description>
+
+	<parent>
+		<groupId>com.mitsugaru</groupId>
+		<artifactId>ProjectKarma</artifactId>
+		<version>1.4.5-SNAPSHOT</version>
+	</parent>
+
+	<scm>
 		<url>https://github.com/Mitsugaru/KarmicShare.git</url>
 	</scm>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<effort>Max</effort>
-					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
-					<xmlOutput>true</xmlOutput>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.7.1</version>
-				<configuration>
-					<minimumTokens>50</minimumTokens>
-					<ignoreIdentifiers>true</ignoreIdentifiers>
-				</configuration>
-			</plugin>
-		</plugins>
-	</reporting>
+
 	<build>
 		<defaultGoal>compile package</defaultGoal>
 		<sourceDirectory>${basedir}/src/</sourceDirectory>
@@ -42,63 +27,5 @@
 				<directory>${basedir}</directory>
 			</resource>
 		</resources>
-		<plugins>
-		    <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.0-beta-3</version>
-					<configuration>
-						<reportPlugins>
-							<plugin>
-								<groupId>org.codehaus.mojo</groupId>
-								<artifactId>jxr-maven-plugin</artifactId>
-								<version>2.0-beta-1</version>
-							</plugin>
-							<plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-javadoc-plugin</artifactId>
-								<version>2.7</version>
-								<configuration>
-									<linksource>true</linksource>
-								</configuration>
-								<reportSets>
-									<reportSet>
-										<reports>
-											<report>javadoc</report>
-										</reports>
-									</reportSet>
-								</reportSets>
-							</plugin>
-						</reportPlugins>
-					</configuration>
-			</plugin>
-		</plugins>
 	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.3.2-R1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.2.20-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
-	<repositories>
-		<repository>
-			<id>Bukkit</id>
-			<url>http://repo.bukkit.org/content/groups/public</url>
-		</repository>
-	</repositories>
 </project>
