--- a/KarmicShare/pom.xml
+++ b/KarmicShare/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.mitsugaru</groupId>
 		<artifactId>ProjectKarma</artifactId>
-		<version>1.4.5-SNAPSHOT</version>
+		<version>1.4.7</version>
 	</parent>
 
 	<scm>
